Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-39162

QQuickWidget keyboard input doesn't work

    XMLWordPrintable

Details

    Description

      Qml doesn't get keyboard events (tested QML TextEdit) when using QML in QQuickWidget. With QWidget::createWindowContainer same qml works.

      QQuickWidget documentation says "QQuickWidget is an alternative to using QQuickView and QWidget::createWindowContainer()" so it should work.

      Simple test application attached.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              lagocs Laszlo Agocs
              qtcomsupport Qt Support
              Votes:
              1 Vote for this issue
              Watchers:
              9 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes