Add workaround for buggy keyboard handling in QQuickWidget

Gotten from https://bugreports.qt.io/browse/QTBUG-39162.